--- a/scss/_settings--palette.scss
+++ b/scss/_settings--palette.scss
@@ -1,4 +1,4 @@
-$brand-primary: #22b8eb;
+$brand-primary: #22B8EB;
 $brand-action: $brand-primary;
 $brand-positive: #15CC35;
 $brand-negative: #FF5F52;
