--- a/scss/_components--container-stats.scss
+++ b/scss/_components--container-stats.scss
@@ -2,4 +2,17 @@
   background-color: $color-background;
   flex: 1;
   padding-left: 1.6rem;
+
+  .stats {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
+
+    .stat {
+      display: flex;
+      margin: 0 $space $space 0;
+      min-width: 500px;
+      min-height: 300px;
+    }
+  }
 }
