--- a/css/main.css
+++ b/css/main.css
@@ -566,9 +566,22 @@ h4 {
     align-content: space-between; }
     .container-stats .stats .stat {
       display: flex;
+      flex-direction: column;
       margin: 0 1rem 1rem 0;
-      min-width: 500px;
-      min-height: 300px; }
+      min-height: 300px;
+      min-width: 500px; }
+      .container-stats .stats .stat-header {
+        display: flex;
+        align-items: center;
+        height: 40px;
+        background-color: #100F2A;
+        padding: 0 1rem; }
+        .container-stats .stats .stat-header h3 {
+          margin: 0;
+          color: white; }
+      .container-stats .stats .stat-body {
+        padding: 1rem;
+        background-color: white; }
 
 .container {
   display: flex;
